# air-gradient-pro-v2

./: README.md
bootloader/: .gitignore  Cargo.toml  build.rs  flash.sh  memory.x
bootloader/.cargo/: config.toml
bootloader/src/: logger.rs  main.rs
cli/: Cargo.toml
cli/src/: archive_util.rs  device_util.rs  main.rs  opts.rs
cli/src/command/device/: confirm_update.rs  mod.rs  reboot.rs  update.rs
firmware/: .gitignore  Cargo.toml  README.md  build.rs  flash.sh  memory.x
firmware/.cargo/: config  config.toml
firmware/src/: common.rs  config.rs  display.rs  main.rs  reset_reason.rs  util.rs
firmware/src/drivers/: mod.rs  pms5003.rs  s8lp.rs  sgp41.rs  sht31.rs  sht40.rs
firmware/src/tasks/: data_manager.rs  display.rs  led_heartbeat.rs  mod.rs  net.rs  pms5003.rs  s8lp.rs  sgp41.rs  sht31.rs  sht40.rs  update_manager.rs
libraries/env-config/: Cargo.toml
libraries/env-config/src/: lib.rs
libraries/wire-protocols/: Cargo.toml
libraries/wire-protocols/src/: device.rs  lib.rs
