[package]
name = "agp-bootloader"
version = "1.0.0"
edition = "2021"
build = "build.rs"

[dependencies]
embassy-stm32 = { version = "0.1", features = ["stm32f407zg", "unstable-pac"] }
embassy-boot-stm32 = "0.2"
embassy-sync = "0.5"

cortex-m = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7"
embedded-io = "0.6"
embedded-storage = "0.3"
embedded-storage-async = "0.4"
static_cell = "2"
log = "0.4"

[build-dependencies.built]
version = "0.7"
features = ["git2", "chrono"]

[features]
debug = [
    "embassy-boot-stm32/log",
    "embassy-stm32/log",
]

[profile.dev]
debug = 2
debug-assertions = true
incremental = false
opt-level = 'z'
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# TODO - using upstream latest for new bootloader lib and other things until next release
[patch.crates-io]
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-boot-stm32 = { git = "https://github.com/embassy-rs/embassy.git" }
