[package]
name = "air-gradient-pro"
version = "1.0.0"
edition = "2021"
authors = ["Jon Lamb"]
build = "build.rs"

[[bin]]
name = "air-gradient-pro"
path = "src/main.rs"

[dependencies]
embassy-stm32 = { version = "0.1.0", features = ["stm32f407zg", "unstable-pac", "time-driver-any", "exti", "defmt"]  }
embassy-sync = { version = "0.5.0" }
embassy-executor = { version = "0.5.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "integrated-timers"] }
embassy-time = { version = "0.3.0", features = ["defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-embedded-hal = "0.1"
embassy-futures = "0.1"
embassy-net = { version = "0.4.0", features = ["defmt", "udp", "tcp", "proto-ipv4", "medium-ethernet" ] }
embassy-boot-stm32 = { version = "0.2", features = ["defmt"] }
embassy-boot = { version = "0.2", features = ["defmt"] }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-io = "0.6"
embedded-io-async = "0.6"
embedded-hal-async = "1.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
nb = "1.0.0"
bitflags = "2.4"
static_cell = "2"
sensirion-i2c = "0.3"
scroll = { version = "0.12", default-features = false, features = [] }
static_assertions = "1"
gas-index-algorithm = "0.1"
profont = "0.7"
heapless = "0.8"

[dependencies.sh1106]
#version = "0.5"
git = "https://github.com/jonlamb-gh/sh1106.git"
branch = "async-i2c"

[dependencies.aqi]
version = "0.2"
default-features = false

[dependencies.embedded-graphics]
version = "0.8"
default-features = false

[dependencies.wire-protocols]
path = "../libraries/wire-protocols"

[build-dependencies.built]
version = "0.7"
features = ["git2", "chrono"]

[build-dependencies.env-config]
path = "../libraries/env-config"

[profile.release]
lto = true
debug = 2

# TODO - using upstream latest for new bootloader lib and other things until next release
[patch.crates-io]
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-net = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-boot-stm32 = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-boot = { git = "https://github.com/embassy-rs/embassy.git" }
